Fix alignment in partners, and layout of our team

--- a/style.css
+++ b/style.css
@@ -28,7 +28,17 @@ header {
     
 }
 
+nav {
+    margin-left: auto; /* Push the nav to the right */
+}
 
+nav ul {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    padding: 0;
+    margin: 0;
+}
 
 /* Logo + Text Container */
 .logo-container {
@@ -1349,6 +1359,7 @@ h1 {
     font-size: 48px;
     font-weight: 900;
     margin-top: 50px;
+    margin-bottom: 0;
 }
 
 .team-container {
@@ -1378,8 +1389,8 @@ h1 {
 }
 
 .team-member.large .image-wrapper {
-    width: 100%;
-    height: 400px;
+    width: 145%;
+    height: 464px;
 }
 
 .team-member .image-wrapper {
@@ -1420,6 +1431,20 @@ h1 {
     object-fit: cover;
 }
 
+.team-member.large h2 {
+    font-size: 13px;
+    font-weight: bold;
+    color: #002E91;
+    margin-top: 0px;
+}
+
+.team-member.large p {
+    font-size: 13px;
+    font-style: italic;
+    color: #719495;
+    margin-top: 0px;
+}
+
 .team-member h2 {
     font-size: 13px;
     font-weight: bold;
@@ -1431,7 +1456,7 @@ h1 {
     font-size: 13px;
     font-style: italic;
     color: #719495;
-    margin-top: 4px;
+    margin-top: 0px;
 }
 
 .team-members-grid {
@@ -1561,10 +1586,11 @@ h1 {
     margin-top: -15%;
 }
 
-h2 {
+.partners-section h2 {
     font-size: 40px;
     color: #003366;
     margin-bottom: 20px;
+    text-align: center;
     margin-top: 20PX;
     margin-bottom: 10%;
 }
